<resources>

    <string name="app_name">OrtSeguros</string>
    <string name="title_home">Mis pólizas</string>
    <string name="Cuenta">Cuenta</string>


    <!-- Autentificacion -->
    <string name="Login"><b>Iniciar Sesión</b></string>
    <string name="Entrar">Entrar</string>
    <string name="EresUsuarioNuevo">¿Eres Usuario Nuevo?</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="EnvíoMailNuevaContraseña">Envío de email para nueva contraseña</string>
    <string name="stringCrear_Cuenta"><u>Crear Cuenta</u></string>
    <string name="stringOlvidar"><u>¿Olvidó su Contraseña?</u></string>
    <string name="Enviar">Enviar</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="FechaNac">Fecha de nacimiento</string>
    <string name="Dni">Dni</string>
    <string name="Domicilio">Domicilio</string>
    <string name="Email">Email</string>
    <string name="Telefono">Teléfono</string>
    <string name="Contraseña">Contraseña</string>
    <string name="ConfirmarContraseña">Confirmar contraseña</string>
    <string name="CrearCuenta">Crear cuenta</string>
    <string name="btnConfig">Configuración</string>
    <string name="txtEditarCuenta">Editar cuenta</string>
    <string name="txtPreguntasFrecuentes">Preguntas Frecuentes</string>
    <string name="txtAsisMecanica">Asistencia mecánica </string>
    <string name="txtContacto">Contacto</string>
    <string name="btnAplicarCambios">Aplicar cambios</string>

    <!--  Polizas -->
    <string name="MisPolizas">Mis pólizas</string>
    <string name="CrearPoliza">Crear póliza</string>
    <string name="NuevaPoliza">Nueva póliza</string>
    <string name="marcaModelo">Marca modelo:</string>
    <string name="danioTotal">Daño total</string>
    <string name="fechaInicioPoliza">Fecha inicio</string>
    <string name="granizo">Granizo:</string>
    <string name="patente">Patente:</string>
    <string name="respCivil">Resp civil:</string>
    <string name="roboParcial">Robo parcial:</string>
    <string name="roboTotal">Robo total:</string>
    <string name="SumaAsegurada">Suma asegurada:</string>
    <string name="ValorCuota">Valor de cuota:</string>
    <string name="Pagos">Ver pagos</string>
    <string name="RealizarPago">Realizar pago</string>
    <string name="ImagenMensaje">Ingresar fotos del Vehiculo: frontal, lat izquierdo, lat derecho y posterior</string>
    <string name="BajaPoliza">Baja de póliza</string>
    <string name="daniototal2">daño total</string>
    <string name="respCivil2">responsabilidad civil</string>
    <string name="granizo2">granizo</string>
    <string name="roboparcial2">robo parcial</string>
    <string name="robototal2">robo total</string>

    <!-- Tareta de credito -->
    <string name="numeroDeTarjeta">Nro de tarjeta</string>
    <string name="fechaCaducidad">Fecha de caducidad</string>
    <string name="titular">Titular</string>
    <string name="codigoSeguridad">Código de seguridad</string>

    <!-- Siniestro -->
    <string name="TipoSiniestro">Tipo siniestro</string>
    <string name="NumSiniestro">Nro de siniestro</string>
    <string name="CoberturasContratadas">Coberturas contratadas</string>
    <string name="numPoliza">Nro de póliza</string>
    <string name="mensaje">mensaje</string>
    <string name="Anterior">Anterior</string>
    <string name="Posterior">Posterior</string>
    <string name="FechaAltaVehiculo">Fecha de alta del vehículo</string>
    <string name="Patente">Patente</string>
    <string name="ProgressText">Generando nueva póliza…</string>
    <string name="Guardar">Guardar</string>
    <string name="DatosPoliza">Datos de la póliza:</string>
    <string name="NuevoSiniestro">Nuevo siniestro</string>
    <string name="Siniestros">Siniestros</string>
    <string name="Siniestro">Siniestro</string>
    <string name="Fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="Ubicacion">Ubicación</string>
    <string name="Descripcion">Descripción</string>


    <!-- Adapter poliza -->
    <string name="patente_text">Patente: %1$s</string>
    <string name="nro_poliza_text">Nro de póliza: %1$s</string>
    <string name="volkswagen">volkswagen</string>
    <string name="fiat">fiat</string>
    <string name="ford">ford</string>

    <!-- Adapter Pago -->
    <string name="numero_pago_text">Número de pago: %1$s</string>
    <string name="fecha_vencimiento_text">Fecha de vencimiento: %1$s</string>
    <string name="fecha_pago_text">Fecha de pago: %1$s</string>

    <!-- Adapter Siniestro -->
    <string name="numero_text">Número: %1$s</string>
    <string name="fecha_text">Fecha: %1$s</string>
    <string name="patente_textSiniestro">Patente: %1$s</string>

    <string name="tipo_granizo">Tipo: Granizo</string>
    <string name="tipo_danio_total">Tipo: Daño total</string>
    <string name="tipo_resp_civil">Tipo: Responsabilidad civil</string>
    <string name="tipo_robo_parcial">Tipo: Robo parcial</string>
    <string name="tipo_robo_total">Tipo: Robo total</string>

    <string name="granizo_siniestro_adapter">granizo</string>
    <string name="danioTotal_siniestro_adapter">danioTotal</string>
    <string name="respCivil_siniestro_adapter">respCivil</string>
    <string name="roboParcial_siniestro_adapter">roboParcial</string>
    <string name="roboTotal_siniestro_adapter">roboTotal</string>


    <!-- Item Pago -->
    <string name="Item_pago_num_pago">Numero de pago</string>
    <string name="Item_pago_fecha_vencimiento">Fecha de vencimiento</string>
    <string name="Item_pago_fecha_de_pago">Fecha de pago</string>

    <!-- Detalle poliza -->
    <string name="marca_text_detalle_poliza">Marca:  %1$s</string>
    <string name="patente_text_detalle_poliza">Patente:  %1$s</string>
    <string name="inicio_poliza_text_detalle_poliza">Inicio de la póliza:  %1$s</string>
    <string name="suma_asegurada_text_detalle_poliza">Suma asegurada: $ %1$s pesos</string>
    <string name="valor_cuota_text_detalle_poliza">Valor de cuota: $ %1$s pesos</string>

    <!-- Mensaje baja poliza -->
    <string name="confirmacion_titulo_bajaPoliza">Confirmación</string>
    <string name="confirmacion_mensaje_bajaPoliza">¿Está seguro de que desea dar de baja esta póliza?</string>
    <string name="boton_si_bajaPoliza">Sí</string>
    <string name="boton_no_bajaPoliza">No</string>


    <!-- Mapeo detalle polizas iconos -->
    <string name="danio_total_mapeo_detalle_poliza">danioTotal</string>
    <string name="resp_civil_mapeo_detalle_poliza">respCivil</string>
    <string name="granizo_mapeo_detalle_poliza">granizo</string>
    <string name="robo_parcial_mapeo_detalle_poliza">roboParcial</string>
    <string name="robo_total_mapeo_detalle_poliza">roboTotal</string>

    <!-- Realizar pago  -->
    <string name="monto_abonar_text">El monto a abonar es de: $ %1$s pesos</string>

    <!-- Pago fragment   -->
    <string name="pago_ya_realizado">Pago ya realizado</string>

    <!-- Detalle siniestro fragment   -->
    <string name="No_hay_mensajes_anteriores">No hay mensajes anteriores</string>
    <string name="No_hay_mensajes_posteriores">No hay mensajes posteriores</string>

    <!-- Nuevo siniestro fragment   -->
    <string name="Siniestro_guardado_con_exito">"Siniestro guardado con éxito"</string>
    <string name="error_guardar_siniestro">Error al guardar el siniestro: %1$s</string>


</resources>