<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.RegisterFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="31dp"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_cuenta"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputApellido"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputApellido"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="familyName"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_cuenta"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Apellido"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputFechaNac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNombre"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputFechaNac"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="date"
        android:background="@drawable/custom_input"
        android:clickable="false"
        android:drawableStart="@drawable/icon_calendar"
        android:drawablePadding="12dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/FechaNac"
        android:inputType="date"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputDni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputApellido"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputDni"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="identification"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_cuenta"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Dni"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputDomicilio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFechaNac"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputDomicilio"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="streetAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_place"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Domicilio"
        android:inputType="text"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDni"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputEmailRegister"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDomicilio"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputTelefono"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="phoneNumber"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_phone"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Telefono"
        android:inputType="number"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailRegister"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputContrasenia"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="newPassword"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/inputConfirmarContrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTelefono"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/inputConfirmarContrasenia"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:autofillHints="newPassword"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/icon_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/ConfirmarContraseña"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputContrasenia"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/btnStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/CrearCuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmarContrasenia"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>