<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameCuenta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.cuenta.CuentaFragment">

    <!-- Título "Cuenta" -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cuenta"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <!-- Nombre -->
    <TextView
        android:id="@+id/txtTitleNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Nombre"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Nombre de usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleNombre"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleApellido"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- Apellido -->
    <TextView
        android:id="@+id/txtTitleApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Apellido"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <TextView
        android:id="@+id/txtApellido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Apellido del usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleApellido"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleDni"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- DNI -->
    <TextView
        android:id="@+id/txtTitleDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Dni"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido" />

    <TextView
        android:id="@+id/txtDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="DNI del usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleDni"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleEmail"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- Email -->
    <TextView
        android:id="@+id/txtTitleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Email del usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleEmail"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleDomicilio"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- Domicilio -->
    <TextView
        android:id="@+id/txtTitleDomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Domicilio"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <TextView
        android:id="@+id/txtDomicilio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Domicilio del usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleDomicilio"
        app:layout_constraintBottom_toTopOf="@+id/txtTitleTelefono"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- Teléfono -->
    <TextView
        android:id="@+id/txtTitleTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Telefono"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDomicilio" />

    <TextView
        android:id="@+id/txtTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Telefono del usuario"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleTelefono"
        app:layout_constraintBottom_toTopOf="@+id/btnConfig"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <!-- Botón Configuración -->
    <Button
        android:id="@+id/btnConfig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnConfig"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefono" />

    <!-- Botón Cerrar Sesión -->
    <TextView
        android:id="@+id/btnTxtCerrarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/CerrarSession"
        android:textColor="#0A62A8"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btnConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

