<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewPago"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtNumPago"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/imagePago"
            android:text="@string/Item_pago_num_pago"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtFechaVencimientoCardView"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtNumPago"
            android:layout_alignStart="@id/txtNumPago"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-4dp"
            android:layout_toStartOf="@+id/imagePago"
            android:text="@string/Item_pago_fecha_vencimiento"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtFechaPagoCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtFechaVencimientoCardView"
            android:layout_alignStart="@id/txtFechaVencimientoCardView"
            android:layout_toStartOf="@+id/imagePago"
            android:text="@string/Item_pago_fecha_de_pago"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imagePago"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:importantForAccessibility="no" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
