<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idCardViewPoliza"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtMarcaModeloCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marcaModelo"
            android:textColor="@color/bordo"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ImagePoliza"
            app:layout_constraintEnd_toStartOf="@+id/txtPatente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ImagePoliza"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/Descripcion"
            app:layout_constraintBottom_toTopOf="@id/txtPatente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMarcaModeloCardView" />

        <TextView
            android:id="@+id/txtPatente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patente"
            android:textColor="@color/bordo"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/ImagePoliza"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtMarcaModeloCardView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtNumPoliza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numPoliza"
            android:textColor="@color/bordo"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImagePoliza"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageUpdate"
            android:layout_width="39dp"
            android:layout_height="36dp"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ImagePoliza"
            app:layout_constraintTop_toBottomOf="@+id/txtPatente"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
